# LLM

wk1/keyword_search/: .env.example  config.yaml  mkdocs.yml  pyproject.toml
wk1/keyword_search/docs/: index.md
wk1/keyword_search/docs/notebooks/: 01_frequently_used_libraries.ipynb  02_tf_idf_search.ipynb  03_bm25_keyword_search.ipynb  04_BM42.ipynb  05_splade_embeddings.ipynb  supportvectors-common.ipynb
wk1/keyword_search/src/bm25_keyword_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wk1/keyword_search/src/keyword_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wk10/dspy_basics/: .env.example  README.md  pyproject.toml
wk10/dspy_basics/docs/notebooks/: dspy_mipro_trng.ipynb  dspy_mipro_trng_local.ipynb  dspy_poc.ipynb
wk10/dspy_basics/docs/notebooks/dspy_local_program/: program.pkl  react_prog.pkl
wk10/dspy_basics/docs/notebooks/dspy_program/: react_prog.pkl
wk10/dspy_basics/docs/project-guide/: project-guide.md
wk10/dspy_basics/src/dspy_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wk10/dspy_basics/src/svlearn_dspy/: dspy_mcp.py  mcp_server.py
wk11/dspy_optimizers/: .env.example  README.md  mkdocs.yml  pyproject.toml
wk11/dspy_optimizers/docs/: index.md
wk11/dspy_optimizers/docs/notebooks/: gepa_1_info_extraction.ipynb  gepa_2_papillon.ipynb  gepa_3_tldr.ipynb  miprov2_1_info_extraction.ipynb  miprov2_2_papillon.ipynb  miprov2_3_tldr.ipynb  optimizers_intro.ipynb
wk11/dspy_optimizers/src/dspy_gepa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wk2/text_clustering_visualization_tsne/: .env.example  README.md  config.yaml  mkdocs.yml  pyproject.toml
wk2/text_clustering_visualization_tsne/docs/: index.md
wk2/text_clustering_visualization_tsne/docs/notebooks/: text_clustering_visualization_tsne.ipynb
wk2/text_clustering_visualization_tsne/docs/project-guide/: project-guide.md
wk2/text_clustering_visualization_tsne/src/: hello.py
wk2/text_clustering_visualization_tsne/src/svlearn_text_clustering_visualization/: __init__.py
wk3/fall_week_2/: .env.example  README.md  config.yaml  pyproject.toml  sbert_fine_tune.out
wk3/fall_week_2/docs/: index.md
wk3/fall_week_2/docs/notebooks/: 00-encoder-embeddings.ipynb
wk3/fall_week_2/src/week_2/: sbert_subjects_full_ft.py
wk4/contrastive_loss/: .env.example  config.yaml  mkdocs.yml  pyproject.toml  sbert_cosent.out  sbert_infonce.out  sbert_matryoshka.out
wk4/contrastive_loss/docs/notebooks/: 00-conc-of-measures.ipynb  01-encoder-embeddings.ipynb  02-matryoshka_embeddings.ipynb
wk5/retrieval_funnel/: .env.example  config.yaml  mkdocs.yml  pyproject.toml
wk5/retrieval_funnel/docs/: index.md
wk5/retrieval_funnel/docs/notebooks/: 01-vector_indices_foundations.ipynb  02-vector_index_qdrant.ipynb  03-retrieval_funnel.ipynb
wk5/retrieval_funnel/src/retrieval_funnel/: hf_text_utils.py
wk6/chunking/chunking_pipeline/: .env.example  mkdocs.yml  pyproject.toml
wk6/chunking/chunking_pipeline/docs/: index.md
wk6/chunking/chunking_pipeline/docs/notebooks/: chunking_pipeline.ipynb  contextual_and_late_chunking.ipynb
wk6/chunking/chunking_strategy/: .env.example  pyproject.toml
wk7/vision_language_understanding/docs/: index.md
wk8/lab8/advanced_chunking/: .env.example  README.md  config.yaml
wk8/lab8/vision_language_understanding/: .env.example  config.yaml  mkdocs.yml  pyproject.toml
wk8/lab8/vision_language_understanding/docs/notebooks/: blip.ipynb  llava.ipynb  siglip2_trial.ipynb
wk8/lab8/vision_language_understanding/docs/project-guide/: project-guide.md
wk8/lab8/vision_language_understanding/src/svlearn_vlu/: __init__.py
wk8/lab8/vision_language_understanding/src/svlearn_vlu/blip/: captioner.py
wk8/lab8/vision_language_understanding/src/svlearn_vlu/deepseek_vl/: captioner.py
wk8/lab8/vision_language_understanding/src/svlearn_vlu/siglip2/: embed_images.py  query_images.py  sample_embed_and_retrieve.py
wk8/lab8/vision_language_understanding/src/vision_language_understanding.egg-info/: requires.txt  top_level.txt
wk8/lab8/vision_transformers_vs_cnn/: .env.example  config.yaml  evaluation_results.csv  mkdocs.yml  pyproject.toml  resnet_run.out  vit_run.out
wk8/lab8/vision_transformers_vs_cnn/docs/notebooks/: trees_classification.ipynb
wk8/lab8/vision_transformers_vs_cnn/docs/project-guide/: project-guide.md
wk8/lab8/vision_transformers_vs_cnn/src/: hello.py
wk8/lab8/vision_transformers_vs_cnn/src/svlearn_vit_cnn/dataset_tools/: preprocess.py
wk8/lab8/vision_transformers_vs_cnn/src/svlearn_vit_cnn/transfer_learning/: trees_classification.py
wk8/lab8/vision_transformers_vs_cnn/src/svlearn_vit_cnn/utils/: train_utils.py
wk8/lab8/vision_transformers_vs_cnn/src/vision_transformers_vs_cnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wk9/advanced_chunking/: mkdocs.yml  pyproject.toml
(+1048 files in other folders)
