[project]
name = "dspy-gepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=4.4.1",
    "dspy>=3.0.3",
    "sentence-transformers>=5.1.2",
    "svlearn-bootcamp>=0.1.7",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
