[project]
name = "vision_language_understanding"
version = "0.1.0"
description = "llm bootcamp vision_language_understanding package"
authors = [
    {name = "SupportVectors AI Lab", email = "aston@supportvectors.com"},
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=3.5.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.23.2",
    "openai>=1.59.7",
    "opencv-python>=4.12.0.88",
    "qdrant-client>=1.12.2",
    "sentencepiece>=0.2.1",
    "svlearn-bootcamp",
]


[project.optional-dependencies]
dev = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
